cluster/base/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      terminationGracePeriodSeconds: 120
      nodeSelector:
        node-role.kubernetes.io/storage: "true"
      containers:
      - name: plex
        image: plexinc/pms-docker:1.43.4.10903-e5521bd8c
        ports:
        - containerPort: 32400
          name: pms
        volumeMounts:
        - name: config
          mountPath: /config
        - name: transcode
          mountPath: /transcode
        - name: media
          mountPath: /media
        - name: dri
          mountPath: /dev/dri
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: plex-config
      - name: transcode
        emptyDir: {}
      - name: media
        persistentVolumeClaim:
          claimName: plex-media
      - name: dri
        hostPath:
          path: /dev/dri
          type: Directory
